@@ -175,8 +175,13 @@ def VIEWLISTOFEPISODESFORSHOW(url,name):
         if(len(segs) == 1):
             strMappedFilepath = filemap(mfSubset.get("SegmentFiles")[0])
         else:
-            #If a recording has multiple segments, use a playlist file generated by sagex api to group the segments together such that during playback it's transparent to the user
-            strMappedFilepath = strUrl + '/sagex/api?c=xbmc:GetPlaylistOfSegmentsForMediafile&1=%s&2=%s&3=%s&raw_content_type=audio/mpegurl&encoder=raw' % (strMediaFileID, urllib2.quote(sage_rec.encode("utf8")), urllib2.quote(sage_unc.encode("utf8")))
+            #If a recording has multiple segments, stack them to group the segments together such that during playback it's transparent to the user
+            strMappedFilepath = "stack://"
+            for seg in segs:
+                strMappedFilepath = strMappedFilepath + filemap(seg) + " , "
+            #Once the stack:// is generated, remove the extraneous " , " at the end of it
+            strMappedFilepath = strMappedFilepath[0:len(strMappedFilepath)-3]
+            #strMappedFilepath = strUrl + '/sagex/api?c=xbmc:GetPlaylistOfSegmentsForMediafile&1=%s&2=%s&3=%s&raw_content_type=audio/mpegurl&encoder=raw' % (strMediaFileID, urllib2.quote(sage_rec.encode("utf8")), urllib2.quote(sage_unc.encode("utf8")))
         
         print "************SEGS=" + str(segs)
         print "************strMappedFilepath=" + str(strMappedFilepath)
@@ -369,8 +374,13 @@ def SEARCHFORRECORDINGS(url,name):
         if(len(segs) == 1):
             strMappedFilepath = filemap(mfSubset.get("SegmentFiles")[0])
         else:
-            #If a recording has multiple segments, use a playlist file generated by sagex api to group the segments together such that during playback it's transparent to the user
-            strMappedFilepath = strUrl + '/sagex/api?c=xbmc:GetPlaylistOfSegmentsForMediafile&1=%s&2=%s&3=%s&raw_content_type=audio/mpegurl&encoder=raw' % (strMediaFileID, urllib2.quote(sage_rec.encode("utf8")), urllib2.quote(sage_unc.encode("utf8")))
+            #If a recording has multiple segments, stack them to group the segments together such that during playback it's transparent to the user
+            strMappedFilepath = "stack://"
+            for seg in segs:
+                strMappedFilepath = strMappedFilepath + filemap(seg) + " , "
+            #Once the stack:// is generated, remove the extraneous " , " at the end of it
+            strMappedFilepath = strMappedFilepath[0:len(strMappedFilepath)-3]
+            #strMappedFilepath = strUrl + '/sagex/api?c=xbmc:GetPlaylistOfSegmentsForMediafile&1=%s&2=%s&3=%s&raw_content_type=audio/mpegurl&encoder=raw' % (strMediaFileID, urllib2.quote(sage_rec.encode("utf8")), urllib2.quote(sage_unc.encode("utf8")))
         
         print "************SEGS=" + str(segs)
         print "************strMappedFilepath=" + str(strMappedFilepath)
